--- a/index.html
+++ b/index.html
@@ -10,18 +10,17 @@
 </head>
 <body>
 <!-- Rating state start -->
+  <main>
   <div class="container">
     <img class="img" src="./images/icon-star.svg" alt="star-icon">
     <h1>How did we do?</h1>
     <p>Please let us know how we did with your support request. All feedback is appreciated 
       to help us improve our offering!</p>
-      <ul>
-        <li><button class="button">1</button></li>
-        <li><button class="button">2</button></li>
-        <li><button class="button">3</button></li>
-        <li><button class="button">4</button></li>
-        <li><button class="button">5</button></li>
-      </ul>
+        <button class="button">1</button>
+        <button class="button">2</button>
+        <button class="button">3</button>
+        <button class="button">4</button>
+       <button class="button">5</button>
       <button class="btn-submit">Submit</button>
     </div>
 
@@ -38,6 +37,7 @@
   </div>
 
   <!-- Thank you state end -->
+  </main>
 
   <script src="./main.js"></script>
 </body>
