--- a/index.html
+++ b/index.html
@@ -16,12 +16,14 @@
     <h1>How did we do?</h1>
     <p>Please let us know how we did with your support request. All feedback is appreciated 
       to help us improve our offering!</p>
+    <div class="btn-container">
         <button class="button">1</button>
         <button class="button">2</button>
         <button class="button">3</button>
         <button class="button">4</button>
        <button class="button">5</button>
       <button class="btn-submit">Submit</button>
+    </div>
     </div>
 
   <!-- Rating state end -->
