previous version of file upload

--- a/index.html
+++ b/index.html
@@ -6,26 +6,25 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="./styles.css">
-   <link href="https://fonts.googleapis.com/css2?family=Overpass:wght@400;600&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Overpass:wght@400;600&display=swap" rel="stylesheet">
 
   <title>Interactive rating component</title>
 </head>
 <body>
 <!-- Rating state start -->
-  <main>
   <div class="container">
     <img class="img" src="./images/icon-star.svg" alt="star-icon">
     <h1>How did we do?</h1>
     <p>Please let us know how we did with your support request. All feedback is appreciated 
       to help us improve our offering!</p>
-    <div class="btn-container">
-        <button class="button">1</button>
-        <button class="button">2</button>
-        <button class="button">3</button>
-        <button class="button">4</button>
-       <button class="button">5</button>
+      <ul>
+        <li><button class="button">1</button></li>
+        <li><button class="button">2</button></li>
+        <li><button class="button">3</button></li>
+        <li><button class="button">4</button></li>
+        <li><button class="button">5</button></li>
+      </ul>
       <button class="btn-submit">Submit</button>
-    </div>
     </div>
 
   <!-- Rating state end -->
@@ -41,7 +40,6 @@
   </div>
 
   <!-- Thank you state end -->
-  </main>
 
   <script src="./main.js"></script>
 </body>
